--- a/client/main.html
+++ b/client/main.html
@@ -3,23 +3,15 @@
 </head>
 
 <body>
-  <h1>Welcome to Meteor!</h1>
+  <h1>Protein Tracker</h1>
+  <h2>Total: <span>100</span></h2>
+  <h2>Goal: <span>200</span></h2>
+  <h3>Enter amount:</h3>
+  <input type="text" id="amount">
+  <input type="submit" id="addAmount" value="Add Protein">
 
-  {{> hello}}
-  {{> info}}
+  <h2>Last 5 Entries</h2>
+  <p>5/11/2018 4:09pm - 20</p>
+
 </body>
 
-<template name="hello">
-  <button>Click Me</button>
-  <p>You've pressed the button {{counter}} times.</p>
-</template>
-
-<template name="info">
-  <h2>Learn Meteor!</h2>
-  <ul>
-    <li><a href="https://www.meteor.com/try" target="_blank">Do the Tutorial</a></li>
-    <li><a href="http://guide.meteor.com" target="_blank">Follow the Guide</a></li>
-    <li><a href="https://docs.meteor.com" target="_blank">Read the Docs</a></li>
-    <li><a href="https://forums.meteor.com" target="_blank">Discussions</a></li>
-  </ul>
-</template>
